cmake_minimum_required(VERSION 3.10)

include(GoogleTest)

add_executable(test_MaxRuntime test_MaxRuntime.cpp)
target_link_libraries(test_MaxRuntime GTest::gtest_main)
gtest_discover_tests(test_MaxRuntime)

add_executable(test_MaxIterations test_MaxIterations.cpp)
target_link_libraries(test_MaxIterations GTest::gtest_main)
gtest_discover_tests(test_MaxIterations)

add_executable(test_NoImprovement test_NoImprovement.cpp)
target_link_libraries(test_NoImprovement GTest::gtest_main)
gtest_discover_tests(test_NoImprovement)

add_executable(test_TimedNoImprovement test_TimedNoImprovement.cpp)
target_link_libraries(test_TimedNoImprovement GTest::gtest_main)
gtest_discover_tests(test_TimedNoImprovement)
